--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
-body {
+
+html,body {
   font-family: "Poppins", sans-serif;
   overflow-x: hidden;
-  width: 100vw;
+  width: 100%;
   max-height: 100vh;
   box-sizing: border-box;
   scroll-behavior: smooth;
+  margin: 0px !important;
+  padding: 0px !important;
 }
 #loading{
   position: fixed;
@@ -248,13 +250,18 @@ body {
   {
     text-align: center;
     margin-top: 3rem;
-    padding:3rem 0px
+    padding:3rem 0px;
+    
   }
 .newslatter form{
   padding: 4rem;
+ 
 }
 .newslatter .form-control{
+    width: 50%;
     height: 3rem;
+    margin: 0px 2rem 0px 14rem;
+    
 }
 .newslatter .form-control:focus{
   outline: none;
