--- a/assets/css/respon.css
+++ b/assets/css/respon.css
@@ -3,6 +3,9 @@
   body {
     overflow-x: hidden;
   }
+  .header-text {
+    padding: 3rem 4rem;
+  }
   .nav-menu {
     position: absolute;
     float: left;
@@ -15,7 +18,7 @@
     bottom: 0px;
   }
   .header-text {
-    padding: 3rem 8rem;
+    padding: 3rem 6rem;
   }
   .header-text h2 {
     font-size: 2rem;
@@ -23,32 +26,29 @@
   .header-text h1 {
     font-size: 1.8rem;
   }
-  .header-text p {
-    color: #7a839e;
-  }
-  .services .card{
+  .services .card {
     height: 40rem;
     border-radius: 2%;
   }
-  .services .card-title{
+  .services .card-title {
     font-size: 0.8rem;
   }
-  .services .card-text{
+  .services .card-text {
     height: 18rem;
+  }
+  .newslatter .form-control {
+    margin: 0px 2rem 0px 8rem;
   }
 }
 @media (max-width: 768px) {
-  .navbar{
+  .navbar {
     position: fixed;
-    background:#fff;
+    background: #fff;
     width: 100%;
     padding: 1rem 1.5rem;
     font-size: 1rem;
     z-index: 100;
     box-shadow: 15px 9px 25px 0 rgb(0 0 0 / 10%);
-
-
-
   }
   .nav-menu {
     position: fixed;
@@ -90,42 +90,50 @@
     -webkit-transform: translateY(-8px) rotate(-45deg);
     transform: translateY(-8px) rotate(-45deg);
   }
-  .header-banner{
+  .header-banner {
     padding-top: 5rem;
   }
+  .header-social {
+    display: none;
+  }
   .header-text {
-    padding: 3rem 8rem;
+    padding: 3rem 4rem;
   }
-  .header-text h2 {
-    font-size: 1rem;
-  }
-  .header-text h1 {
-    font-size: 0.8rem;
-  }
-  .header-text p {
-    font-size: 0.6rem;
-  }
-  .header-social{
+
+  .header-social {
     margin-left: 2rem;
     top: 8rem;
     position: absolute;
   }
-  .R-col{
+  .about {
+    padding: 20rem 3rem;
+  }
+  .services {
+    margin-top: -10rem;
+  }
+  .services .card {
+    height: 25rem;
+    border-radius: 2%;
+  }
+  .services .card-text {
+    height: 6rem;
+  }
+  .R-col {
     margin-top: 2rem;
   }
 }
 @media (max-width: 576px) {
-  body{
+  body {
     overflow-x: hidden;
   }
   .nav-menu {
     left: -500%;
   }
-  .banner-img{
+  .banner-img {
     display: none;
   }
   .header-text {
-    padding: 3rem 8rem;
+    padding: 3rem 3rem;
   }
   .header-text h2 {
     font-size: 2rem;
@@ -133,28 +141,35 @@
   .header-text h1 {
     font-size: 1.8rem;
   }
-.about{
-  padding: 3rem;
-}
-  .services .card{
+
+  .about {
+    padding: 0rem 3rem;
+  }
+  .services {
+    margin-top: 5rem;
+  }
+  .services .card {
     height: 25rem;
     border-radius: 2%;
   }
-  .services .card-text{
+  .services .card-text {
     height: 6rem;
   }
-  footer{
+  .newslatter .form-control {
+    margin: 0px 2rem 0px 4rem;
+  }
+  footer {
     padding-left: 4rem;
   }
-  .R-col{
+  .R-col {
     margin-top: 4rem;
   }
   footer .social {
     padding: 10rem 2rem 0px;
     margin-top: 8rem;
   }
-  footer{
-    background: linear-gradient(to bottom right, #1a129f, #4e44e1 );
+  footer {
+    background: linear-gradient(to bottom right, #1a129f, #4e44e1);
   }
   footer .social {
     padding: 0rem 2rem 0px;
@@ -162,6 +177,9 @@
   }
 }
 @media (max-width: 480px) {
+  .header-text {
+    padding: 3rem 4rem;
+  }
   .nav-menu {
     left: -500%;
   }
@@ -172,55 +190,54 @@
     font-size: 1.3rem;
   }
 
-.top-text h1{
+  .top-text h1 {
     font-size: 2.5rem;
-
-}
-.top-text p{
+  }
+  .top-text p {
     color: #7a839e;
-    padding-top: 2rem; 
+    padding-top: 2rem;
     padding-right: 0rem;
+  }
+  .about {
+    margin-top: 0rem;
+  }
+  .services {
+    margin-top: 0rem;
+  }
+  .services .card {
+    height: 30rem;
+    border-radius: 2%;
+  }
+  .services .card-text {
+    height: 10rem;
+  }
+  .newslatter .form-control {
+    width: 100%;
+    margin: 0px 2rem 0px 2rem;
+  }
+  footer {
+    background: linear-gradient(to bottom right, #1a129f, #4e44e1);
+  }
+  .R-col {
+    margin-top: 2rem;
+  }
+  footer .social {
+    padding: 0rem 2rem 0px;
+    margin-top: -12rem;
+  }
 }
-.about{
-  margin-top: 0rem;
-}
-.services{
-  margin-top: 0rem;
-}
-.services .card{
-  height: 30rem;
-  border-radius: 2%;
-}
-.services .card-text{
-  height: 10rem;
-}
-footer{
-  background: linear-gradient(to bottom right, #1a129f, #4e44e1 );
-}
-.R-col{
-  margin-top: 2rem;
-}
-footer .social {
-  padding: 0rem 2rem 0px;
-  margin-top: -12rem;
-}
-}
-@media (max-width: 480px){
+@media (max-width: 480px) {
   .header-text h2 {
     font-size: 1.2rem;
   }
   .header-text h1 {
     font-size: 1.1rem;
   }
-  .newslatter .form-control{
+  .newslatter .form-control {
     width: 100%;
     margin: 0px 0rem 0px 0rem;
-    
-}
-.btn-news{
-  margin-top: 1rem;
-}
-.header-social{
-  display: none;
-}
+  }
+  .btn-news {
+    margin-top: 1rem;
+  }
 }
